testdata/error/unmatching_op_rate.ledger
; Posting with unmatching add operation.

2024/09/01 Shop
    Expenses                                     100 OKANE @ (1 + 5 JPY)
    Assets:Banks
